Photo stretch fix and biography

--- a/dev/assets/css/layout/general.scss
+++ b/dev/assets/css/layout/general.scss
@@ -36,6 +36,10 @@ ul {
     margin: 0;
 }
 
+.lb-container {
+    max-width: initial;
+}
+
 .title {
     font-size: 40px;
 }
